# Uqala_NLP

./: .env.example  .gitignore  ANALYSIS_FALSE_POSITIVES.md  CLAUDE.md  EMPIRICAL_LEXICONS.md  EXTRACTION_IMPROVEMENTS.md  HOW_TO_USE_V80.md  NEXT_STEPS.md  QUICK_START_V80.md  README.md  V80_COMPLETION_SUMMARY.md  V80_RESULTS.md  analyze_agreement_summary.py  compare_models_by_text.py  final_venn_analysis.py  match_deepseek_complete.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_in_venv.bat  run_in_venv.ps1  run_with_venv.py  smart_camel_loader.py  test_camel_venv.py  train_v80.py  validate_v80_external_corpus.py  validate_v80_on_ibn_rabbih.py
comparison_ensemble/: INDEX.md  QUICKSTART.md  README.md  THESIS_TEMPLATE.md
data/: README.md
docs/: BOW_FEATURES_V0.md  CAMEL_TOOLS_SETUP.md  COMPREHENSIVE_GUIDE.md  DELETED_FILES.txt  FEATURES_REVIEW.md  FEATURE_PROPOSAL.md  GITHUB_SETUP.md  INDEX.md  MULTI_ENVIRONMENT_SETUP.md  PIPELINE_ENSEMBLE_EXPLICATION.md  PIPELINE_ENSEMBLE_QUICK_REFERENCE.md  PIPELINE_ENSEMBLE_TECHNICAL.md  README.md  RUN_V80.txt  VERIFICATION_COMPLETE.md  WORKFLOW.md  features_catalog_majnun_aqil.md  guide_morphologie.md
models/: README.md  comparison_report_v79.json  lr_classifier_50features.pkl  lr_report_50features.json  lr_report_79features.json  lr_report_v80.json  openiti_lr_71features_targeted_candidates.json  xgb_report_79features.json  xgb_report_v80.json
notebooks/: 01_corpus_exploration.ipynb  02_feature_analysis.ipynb  03_pipeline_comparison.ipynb
openiti_detection/: INDEX.md  QUICKSTART.md  README.md  detect_lr_xgboost.py  (+3 more)
(+140 files in other folders)
